# Prismio

./: .gitignore  .gitignore.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  GOVERNANCE.md  README.MD  ROADMAP.md  SECURITY.md  test.psmi  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml
docs/: contributing.md
src/: main.cpp
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.h
src/ir/: CMakeLists.txt  ir.cpp  ir.h
src/keyword/: CMakeLists.txt  keywords.cpp  keywords.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  token.h
src/parser/: CMakeLists.txt  node.h  parser.cpp  parser.h  parser_nodes.h
src/runtime/: CMakeLists.txt  runtime.cpp  runtime.h
src/semantic/: CMakeLists.txt  semantic.cpp  semantic.h
src/tokens/: keywords.cpp  keywords.h  token.h
src/utils/: CMakeLists.txt  class_type.cpp  class_type.h  constants.h  declaration.cpp  declaration.h  extension.cpp  extension.h  keywords.cpp  keywords.h  lexer_utils.cpp  token.h  tokens.cpp
tests/: llvm.cpp  run.bat  syntax.kt  test.psmi
tests/.fleet/: run.json  settings.json
utils/: CMakeLists.txt  lexer_utils.cpp  lexer_utils.h
